--- a/.github/workflows/DeployingSurge.yml
+++ b/.github/workflows/DeployingSurge.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
          node-version: 12
-    - name: borales/actions-yarn@v2.0.0
+    - uses: borales/actions-yarn@v2.0.0
       with:
         cmd: install
     - name: Build react app
